--- a/CourseConnect/templates/pages/Course.html
+++ b/CourseConnect/templates/pages/Course.html
@@ -1,24 +1,34 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}Course #{{ course.id }} {% endblock title %}
 {% block content %}
-    <div class="container">
-        <br><br>
-        <div class="card mb-3" style="width: 650px; height: 600px;">
-            {% if course.Image %}
-                <img src="{{ course.Image.url }}" class="img-fluid-rounded-start" alt="..." style="width: 650px; height: 450px;">
-            {% else %}
-                <img src="{% static 'Images/pictureplaceholder.jpg' %}" class="img-fluid rounded-start" alt="..." style="width: 650px; height: 450px;">
-            {% endif %}
-            <div class="col-md-8">
-                <h5 class="card-title">{{ course.Title }}</h5>
-                <div class="card-body">
-                    <p class="card-text">{{ course.Description }}</p>
-                    <br>
-                    <a href="{{course.URL}}" target="_blank">{{ course.id }}</p>
-                </div>
-                <div><a href="{% url 'addreview' course.id %}"><button type="submit" class="btn btn-secondary" id="addreviewbtn">Add Review</button></a></div>
+    <br>
+    <div class="card mb-5" style="width: 650px; height: 450px;">
+        {% if course.Image %}
+            <img src="{{ course.Image.url }}" class="img-fluid-rounded-start" alt="..." style="width: 650px; height: 450px;">
+        {% else %}
+            <img src="{% static 'Images/pictureplaceholder.jpg' %}" class="img-fluid rounded-start" alt="..." style="width: 650px; height: 450px;">
+        {% endif %}
+    </div>
+    <div class="container>
+        <div class="row">
+            <div class="col">
+                <h4>{{ course.Title }}</h4>
             </div>
         </div>
-        <br><br>
-    </div>
+        <br>
+        <div class="row">
+            <div class="col">
+               <h5>{{ course.Description }}</h5>
+            </div>
+            <div class="col">
+                <a href="{{course.URL}}" target="_blank"><button type="submit" class="btn btn-secondary">Go To Course</button></p>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col"><a href="{% url 'addreview' course.id %}"><button type="submit" class="btn btn-secondary">Add Review</button></a></div>
+        </div>
+
+    <br><br><br>
 {% endblock %}
