--- a/CourseConnect/templates/pages/CoursesList.html
+++ b/CourseConnect/templates/pages/CoursesList.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}All Courses | CourseConnect{% endblock title %}
+{% block title %}All Courses{% endblock title %}
 {% block content %}
 <section class="section">
     <div>
