--- a/CourseConnect/templates/navbar.html
+++ b/CourseConnect/templates/navbar.html
@@ -2,18 +2,18 @@
 <nav>
     <div class="nav">
         <a href="{% url 'homepage' %}"><img src="{% static 'Images/Logo_14.png' %}" alt="logo" class="logo" style="width: 10em; height: 5em;"></a>
-        <a href="{% url 'homepage' %}" class="option active">Home</a> 
+        <a href="{% url 'homepage' %}" class="option">Home</a> 
         <a href="{% url 'allreviews' %}" class="option">Reviews</a>
         <div class="dropdown">
-            <a href="#" class="option">Courses</a>
+            <a href="{% url 'allcourses' %}" class="option">Courses</a>
             <div class="dropdown-content">
-                <a href="{% url 'category' 'Business-&-Management' %}" class="profilelogo">Business & Management</a>
-                <a href="{% url 'category' 'Computer-Science' %}" class="profilelogo">Computer Science</a>
-                <a href="{% url 'category' 'Math' %}" class="profilelogo">Math</a>
-                <a href="{% url 'category' 'Art-&-Culture' %}" class="profilelogo">Art & Culture</a>
-                <a href="{% url 'category' 'Language' %}" class="profilelogo">Language</a>
-                <a href="{% url 'category' 'Data-Analysis-&-Statistics' %}" class="profilelogo">Data Analysis & Statistics</a>
-                <a href="{% url 'allcourses' %}" class="option">View All Courses</a>
+                <a href="{% url 'category' 'Business-&-Management' %}" class="option2">Business & Management</a>
+                <a href="{% url 'category' 'Computer-Science' %}" class="option2">Computer Science</a>
+                <a href="{% url 'category' 'Math' %}" class="option2">Math</a>
+                <a href="{% url 'category' 'Art-&-Culture' %}" class="option2">Art & Culture</a>
+                <a href="{% url 'category' 'Language' %}" class="option2">Language</a>
+                <a href="{% url 'category' 'Data-Analysis-&-Statistics' %}" class="option2">Data Analysis & Statistics</a>
+                <a href="{% url 'allcourses' %}" class="option2">View All Courses</a>
             </div>
         </div>
         <style>
@@ -27,30 +27,33 @@
 
             /* The container <div> - needed to position the dropdown content */
             .dropdown {
-            position: relative;
-            display: inline-block;
+                position: relative;
+                display: inline-block;
             }
 
             /* Dropdown Content (Hidden by Default) */
             .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f1f1f1;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-            z-index: 1;
+                display: none;
+                position: absolute;
+                background-color: #f1f1f1;
+                min-width: 160px;
+                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+                z-index: 1;
             }
 
             /* Links inside the dropdown */
             .dropdown-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
+                color: black;
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
             }
 
             /* Change color of dropdown links on hover */
-            .dropdown-content a:hover {background-color: #ddd;}
+            .dropdown-content a:hover {
+                color: #9298eb;
+                background-color: #ddd;
+            }
 
             /* Show the dropdown menu on hover */
             .dropdown:hover .dropdown-content {display: block;}
@@ -63,13 +66,29 @@
             <div class="dropdown">
                 <button class="dropbtn"><img src="{% static 'Images/profile.jpg' %}" alt="profile" style=" border-radius: 50px; width: 3em; height: 3em;"></button>
                 <div class="dropdown-content">
-                    <a href="{% url 'userprofile' user.username %}" class="profilelogo">My Profile</a>
-                    <a href="{% url 'logout' %}" class="option">Logout</a>
+                    <a href="{% url 'userprofile' user.username %}" class="option2">My Profile</a>
+                    <a href="{% url 'logout' %}" class="option2">Logout</a>
                 </div>
             </div>
         {% else %}
-            <a href="{% url 'login' %}" class="btn2-a">Sign In</a>
-            <a href="{% url 'register' %}" class="btn2-a">Sign Up</a>
+            <a href="{% url 'login' %}" class="option" style="color: black;">Sign In</a>
+            <a href="{% url 'register' %}" class="option" style="color: black;">Sign Up</a>
         {% endif %}
     </div>
- </nav>
+</nav>
+
+<script>
+    document.querySelectorAll(".option").forEach((link) => {
+        if (link.href === window.location.href) {
+            link.classList.add("active");
+            link.setAttribute("aria-current", "page");
+        }
+    });
+
+    document.querySelectorAll(".option2").forEach((link) => {
+        if (link.href === window.location.href) {
+            link.classList.add("active2");
+            link.setAttribute("aria-current", "page");
+        }
+    });
+</script>
