--- a/CourseConnect/templates/pages/AddReview.html
+++ b/CourseConnect/templates/pages/AddReview.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block title %}Course Review | CourseConnect{% endblock title %}
+{% block title %}Course Review{% endblock title %}
 {% block content %}
 <header class="bg-dark py-5">
     <div class="container px-4 px-lg-5 my-5">
