--- a/CourseConnect/templates/pages/EditProfile.html
+++ b/CourseConnect/templates/pages/EditProfile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block title %}Edit Profile | CourseConnect{% endblock title %}
+{% block title %}Edit Profile{% endblock title %}
 {% block content %}
     <header class="bg-dark py-5">
         <div class="container px-4 px-lg-5 my-5">
