--- a/CourseConnect/templates/pages/HomePage.html
+++ b/CourseConnect/templates/pages/HomePage.html
@@ -1,45 +1,160 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Home | CourseConnect{% endblock title %}
-
+{% block title %}Home{% endblock title %}
 {% block content %}
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active c-item">
-        <img src="{% static 'Images/course.png' %}" class="d-block w-100" alt="...">
-        <div style="width: 100%; height: 80%; position: absolute;text-align: center;left: 10px;"class="carousel-caption top-0 d-none d-md-block">
-          <h1 class ="display-1 fw-bolder text-caitalize">Course Connect</h1>
-        </div>
-      </div>
-      <div class="carousel-item  c-item">
-        <img src= " {% static 'Images/coursera.jpg' %}" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item  c-item">
-        <img src=" {% static 'Images/udacity.png' %}" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item  c-item">
-        <img src=" {%static 'Images/udemy.png' %}" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item  c-item">
-        <img src=" {%static 'Images/edx.jpg' %}" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+
+<!--Sliding Banners-->
+
+<!-- Slideshow container -->
+<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 5</div>
+    <img src="{% static 'Images/course.png' %}" alt="Main" style="width:100%">
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 5</div>
+    <img src="{% static 'Images/coursera.jpg' %}" alt="Coursera" style="width:100%">
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 5</div>
+    <img src="{% static 'Images/udacity.png' %}" alt="Udacity" style="width:100%">
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">4 / 5</div>
+    <img src="{%static 'Images/udemy.png' %}" alt="Udemy" style="width:100%">
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">5 / 5</div>
+    <img src="{%static 'Images/edx.jpg' %}" alt="edX" style="width:100%">
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
-<!-- <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Home</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<link rel="stylesheet" href="../../static/app/css/style.css">
-</head> -->
+<br>
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
+  <span class="dot" onclick="currentSlide(5)"></span>
+</div>
+
+<style>
+  * {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1600px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.5s ease;
+}
+
+.dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 3s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+</style>
+
+<script>
+  let slideIndex = 0;
+  showSlides();
+
+function showSlides() {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";
+  }
+  slideIndex++;
+  if (slideIndex > slides.length) {slideIndex = 1}
+  slides[slideIndex-1].style.display = "block";
+  setTimeout(showSlides, 2000); // Change image every 2 seconds
+}
+</script>
+
 <div class="row conter">
   <div style=" left:0px; width: 100vw; height: 80%;top:100vh; position: absolute; background: #D8D7F6">
     <img style="width: 10%; height: 6%; left: 169px; top: 40px; position: absolute" src="{% static 'Images/home1.svg' %}">
@@ -56,7 +171,7 @@
       <div class="card-body">
         <h5 class="card-title">Find  Courses</h5>
         <p class="card-text" style=" top:5%;left:2%;color:#000000;text-align:left">Find the course you are looking for from all the leading courses' websites with one click.</p>
-        <a href="login" class="btn btn-primary">Sign Up/ Sign In</a>
+        <a href="login" class="btn btn-primary">Sign Up/Sign In</a>
       </div>
     </div>
   </div>
