--- a/CourseConnect/templates/pages/UserProfile.html
+++ b/CourseConnect/templates/pages/UserProfile.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}{{ user.username }}'s Profile | CourseConnect{% endblock title %}
+{% block title %}{{ user.username }}'s Profile{% endblock title %}
 {% block content %}
     <br>
     <div class="body-container">
