--- a/CourseConnect/templates/pages/UserReviews.html
+++ b/CourseConnect/templates/pages/UserReviews.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}All User Reviews | CourseConnect{% endblock title %}
+{% block title %}All User Reviews{% endblock title %}
 {% block content %}
     <br><br><br><br><br>
     {% for review in reviews %}
