--- a/CourseConnect/templates/pages/update_info.html
+++ b/CourseConnect/templates/pages/update_info.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Edit Profile | CourseConnect{% endblock title %}
+{% block title %}Edit Profile{% endblock title %}
 
 {% block content %}
     <header class="bg-dark py-5">
