--- a/CourseConnect/templates/pages/Search.html
+++ b/CourseConnect/templates/pages/Search.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Search | CourseConnect{% endblock title %}
+{% block title %}Search{% endblock title %}
 
 {% block content %}
     <div class="container">
