--- a/CourseConnect/static/CSS/style_userprofile.css
+++ b/CourseConnect/static/CSS/style_userprofile.css
@@ -1,18 +1,19 @@
 /*-- General --*/
 
-.body-container {
-    width: 97.5%;
-    height: 80%;
-    background: #DBDBDB;
-    margin: auto;
-    padding: 5px;
-    position: relative;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.header-container {
-    width: 98%;
+.body-container {
+    width: 99%;
+    height: 790px;
+    background: #DBDBDB;
     margin: auto;
-    height: 5.5%;
+    padding: 12px;
+    display: flex;
+    border-radius: 10px;
 }
 
 h2 {
@@ -28,94 +29,50 @@ h4, h5 {
 }
 
 /*-- Icons --*/
-
-.fa-plus-circle {
-    -webkit-text-fill-color: #F2D9ED;
-    -webkit-text-stroke: 1px;
-    -webkit-text-stroke-color: #000000;
-    font-size: 16px;
-    display: flex;
-    float:inline-end;
-    margin-left: 5px;
+.fa {
+    font-size: 26px;
+    margin-right: 12px;
+    margin-top: 9px;
+    float: right;
+    color: black;
 }
-
-.fa-pencil-square-o {
-    -webkit-text-fill-color: #F2D9ED;
-    -webkit-text-stroke: 1px;
-    -webkit-text-stroke-color: #000000;
-    font-size: 16px;
-    display: flex;
-    float:inline-end;
-    margin-left: 5px;
-}
-
-.fa-camera {
-    font-size: 50px;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, 20%);
-}
-
 
 /*-- About Info --*/
-
 .about-info {
-    width: 40%;
-    height: 800px;
+    width: 47%;
+    height: 758px;
     background: #FFFFFF;
     border-radius: 20px;
-    padding: 10px;
-    margin: 10px;
-    position: relative;
-    display: inline-block;
-}
-
-.about-info .about-info-title {
-    position: absolute;
-    height: 22%;
-    left: 50%;
-    transform: translate(-50%, 0%);
-}
-
-.about-info .about-info-title h3 {
-    position: absolute;
-    transform: translate(18%,400%);
-}
-
-.about-info .edit-profile-btn {
-    position: absolute;
-    top: 97%;
-    left: 50%;
-    transform: translate(-50%, -97%);
 }
 
 .about-info .about-info-options {
-    height: 57%;
-    width: 90%;
+    height: 50%;
+    width: 95%;
     background-color: #D8D7F6;
-    padding: 2%;
+    padding: 3%;
     border-radius: 15px;
-    position: absolute;
-    top: 75%;
-    left:50%;
-    transform: translate(-50%, -75%);
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
 }
 
 .about-info .about-info-options .about-info-options-title {
-    padding: 22px;
-}
-
-.username {
-    transform: translate(0%, 350%);
+    padding-bottom: 20px;
+    padding-top: 20px;
+    padding-left: 15px;
 }
 
 .edit-profile-btn {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    width: 120px;
+    height: 45px;
     padding: 5px;
     background: #8BADDA;
     border-radius: 10px;
     border: 1px #AEC0F2 solid;
     justify-content: center;
-    align-items: center;
     gap: 10px;
     display: inline-flex;
     transition-duration: 0.3s;
@@ -160,49 +117,44 @@ h4, h5 {
 
 /*--Other Info--*/
 .other-info{
-    width: 57%;
-    height: 750px;
-    display: inline-block;
-    transform: translate(0px,-55px);
-}
-
-.other-info .skills {
-    width: 100%;
-    height: 17%;
-    padding: 10px;
+    width: 52%;
+    height: 758px;
+    background: #FFFFFF;
     border-radius: 20px;
-    background-color: #FFFFFF;
+    margin-left: 35px;
+    padding: 8px;
 }
 
-.other-info .goals {
-    width: 100%;
-    height: 17%;
-    padding: 10px;
-    margin-top: 95px;
-    border-radius: 20px;
-    background-color:  #FFFFFF;
+.other-info .skills{
+    margin-bottom: 22px;
+    background-color: #D8D7F6;
+    padding: 8px;
+    border-radius: 5px;
 }
 
-.other-info .experience {
-    width: 100%;
-    height: 17%;
-    padding: 10px;
-    margin-top: 95px;
-    border-radius: 20px;
-    background-color:  #FFFFFF;
+.other-info .goals{
+    margin-bottom: 22px;
+    background-color: #D8D7F6;
+    padding: 8px;
+    border-radius: 5px;
 }
 
-.other-info .my-courses {
-    width: 100%;
-    height: 17%;
-    padding: 10px;
-    margin-top: 95px;
-    border-radius: 20px;
-    background-color:  #FFFFFF; 
+.other-info .experience{
+    margin-bottom: 22px;
+    background-color: #D8D7F6;
+    padding: 8px;
+    border-radius: 5px;
 }
 
-/*-- Clear Floating Effect --*/
+.other-info .reviews{
+    background: #D8D7F6;
+    padding: 8px;
+    border-radius: 5px;
+}
 
-.clear {
-    clear: both;
+.showbtn{
+    border-radius: 6px;
+    border-color: transparent;
+    color: black;
+    background-color: rgb(125, 125, 125);
 }
