--- a/CourseConnect/templates/pages/Category.html
+++ b/CourseConnect/templates/pages/Category.html
@@ -3,7 +3,7 @@
 {% block title %} {{ category }} Courses {% endblock title %}
 {% block content %}
     <div class="container">
-        <h2>{{ category }}</h2>
+        <h2>{{ category }} ({{ length }})</h2>
             <table class="table table-bordered table-striped">
                 <thead>
                 <tr>
