--- a/CourseConnect/templates/mainpages/review_detail.html
+++ b/CourseConnect/templates/mainpages/review_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Review | CourseConnect{% endblock title %}
+{% block title %}Review{% endblock title %}
 {% block content %}
     <center>
         <article class="media content-section">
