--- a/CourseConnect/templates/pages/AllReviews.html
+++ b/CourseConnect/templates/pages/AllReviews.html
@@ -8,7 +8,11 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h2 style="margin-left: 0px;">Reviewed by <a href="{% url 'user-reviews' review.user.username %}" style="font-size: 30px;">{{ review.user.first_name }} {{ review.user.last_name }}</a></h2>
+                {% if review.user.first_name %}
+                    <h2 style="margin-left: 0px;">Reviewed by <a href="{% url 'user-reviews' review.user.username %}" style="font-size: 30px;">{{ review.user.first_name }} {{ review.user.last_name }}</a></h2>
+                {% else %}
+                    <h2 style="margin-left: 0px;">Reviewed by <a href="{% url 'user-reviews' review.user.username %}" style="font-size: 30px;">{{ review.user.username }}</a></h2>
+                {% endif %}
             </div>
             <div class="col">
                 {% if review.rating == 0 %}
