--- a/CourseConnect/templates/mainpages/review_form.html
+++ b/CourseConnect/templates/mainpages/review_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block title %}New Review | CourseConnect{% endblock title %}
+{% block title %}New Review{% endblock title %}
 {% block content %}
     <div class="container">
         <div class="element1">
