--- a/CourseConnect/CourseConnect/static/CSS/base.css
+++ b/CourseConnect/CourseConnect/static/CSS/base.css
@@ -2,30 +2,36 @@ a{
     font-style: normal;
     font-family: 'Kdam Thmor Pro', sans-serif;  
     font-size: 1.3em;    
-   text-decoration: none;
+    text-decoration: none;
 }
-.nav{
+
+.parent{
+    background: transparent;
+    width: 100%;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav{
+    width: 80%;
+    height: 140px;
+    margin: 10px;
+    padding: 5px;
+    background-color: white;
     justify-content:space-around;
     align-items: center;
-    gap: 6rem;
-}
-.sign{
-    display: flex;
-    gap: 1rem;
-   margin-left: 20vw;
-}
-nav{
+    gap: 4rem;
     border-radius: 20px;
-    width: fit-content;
-    padding: 1rem 1em;
-    background-color:white;
-    display:flex;
-    margin-left: 20vw;
-    position:sticky;
-    top:0px;
-    z-index: 10;
-    height: fit-content;
+    display: flex;
+}
+
+nav{
+    position: sticky;
+    z-index: 999;
+    top: 0;
 }
 
 .btn1 ,.btn2{
@@ -45,8 +51,6 @@ nav{
     border-radius: 10px;
     background: hsl(240, 83%, 36%);
     border: 0px ;
-
-
 }
 .btn_a{
     color: white;
@@ -72,11 +76,10 @@ nav{
 }
 
 .logo{
-    width: 12vw;
-    height: 10vh;
+    width: 8em;
+    height: 5em;
     z-index: 10;
     float: left;
-    padding-left: 3rem;
 }
 
 .option{
