--- a/CourseConnect/CourseConnect/static/CSS/style_userprofile.css
+++ b/CourseConnect/CourseConnect/static/CSS/style_userprofile.css
@@ -37,6 +37,10 @@ h4, h5 {
     color: black;
 }
 
+.fa:hover{
+    color: rgba(5, 5, 5, 0.89);
+}
+
 /*-- About Info --*/
 .about-info {
     width: 47%;
@@ -132,14 +136,14 @@ h4, h5 {
     border-radius: 5px;
 }
 
-.other-info .goals{
+.other-info .recommendation{
     margin-bottom: 22px;
     background-color: #D8D7F6;
     padding: 8px;
     border-radius: 5px;
 }
 
-.other-info .experience{
+.other-info .course{
     margin-bottom: 22px;
     background-color: #D8D7F6;
     padding: 8px;
@@ -157,4 +161,10 @@ h4, h5 {
     border-color: transparent;
     color: black;
     background-color: rgb(125, 125, 125);
+}
+
+.showbtn:hover{
+    color: rgb(0, 0, 0, 0.8);
+    background-color: rgb(125, 125, 125, 0.8);
+    padding: 0px 1px;
 }
