--- a/CourseConnect/templates/navbar.html
+++ b/CourseConnect/templates/navbar.html
@@ -74,9 +74,9 @@
             .dropdown:hover .dropbtn {background-color: white;}
         </style>
         {% if user.is_authenticated %}
-            <a href="#" class="profilelogo"><img src="{% static 'Images/notification.png' %}" alt="profile" style=" border-radius: 50px; width: 2em; height: 2em;"></a>
+            <!-- <a href="#" class="profilelogo"><img src="{% static 'Images/notification.png' %}" alt="profile" style=" border-radius: 50px; width: 2em; height: 2em;"></a> -->
             <div class="dropdown">
-                <button class="dropbtn"><img src="{% static 'Images/profile.jpg' %}" alt="profile" style=" border-radius: 50px; width: 3em; height: 3em;"></button>
+                <button class="dropbtn"><img src="{% static 'Images/ProfileLogo2.png' %}" alt="profile" style=" border-radius: 50px; width: 3em; height: 3em;"></button>
                 <div class="dropdown-content">
                     <a href="{% url 'userprofile' user.username %}" class="option2">My Profile</a>
                     <a href="{% url 'logout' %}" class="option2">Logout</a>
