--- a/CourseConnect/templates/pages/EditProfile.html
+++ b/CourseConnect/templates/pages/EditProfile.html
@@ -28,7 +28,7 @@
                     </div>
                 </form>
                 <br>
-                <a href="{% url 'reset_password' %}"><button type="submit" class="btn btn-secondary">Update Password</button></a>
+                <a href="{% url 'reset_password' %}" style="font-family: inherit;"><button type="submit" class="btn btn-secondary">Update Password</button></a>
                 <br><br>
             </div>
         </div>
