--- a/CourseConnect/templates/pages/password_reset.html
+++ b/CourseConnect/templates/pages/password_reset.html
@@ -19,7 +19,7 @@
             <form method="post">
                 {% csrf_token %}
                 {{form}}
-                <input type="submit" name="Send email" class="login-btn font-style font-size" style="float:right">
+                <input type="submit" name="Send email" class="login-btn font-style font-size" style="float:right; font-size: large ;">
             </form>
         </div>
     </div>
