--- a/CourseConnect/templates/pages/recommendation_page.html
+++ b/CourseConnect/templates/pages/recommendation_page.html
@@ -32,12 +32,12 @@
                     <table>
                         <tr>
                             <th>Title</th>
-                            <th>Rating</th>
+                            #<th>Rating</th>
                             <th>Level</th>
                             <th>Language</th>
                             <th>Price</th>
                             <th>URL</th>
-                            <th>rating</th>
+                            <th>rating-predicted</th>
                             <th>Platform</th>
                             <th>Certificate</th>
                             <th>Duration</th>
