--- a/CourseConnect/templates/pages/recommendation_page.html
+++ b/CourseConnect/templates/pages/recommendation_page.html
@@ -56,7 +56,7 @@
                             <td>{{ course.Level }}</td>
                             <td>{{ course.Language }}</td>
                             <td>{{ course.Price }}</td>
-                            <td>{{ course.URL }}</td>
+                            <td><a href={{course.URL}} target="_blank">{{course.URL}}</a></td>
                             <td>{{ course.rating }}</td>
                             <td>{{ course.Platform }}</td>
                             <td>{{ course.Certificate }}</td>
